crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/member_user_defined_value_type_definition/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.8'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/member_user_defined_value_type_definition/input.sol:3:3]
   │
 3 │   type Foo is bool;
   │   ────────┬────────  
   │           ╰────────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 135..143,
                    },
                    name: Identifier {
                        range: 144..150,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [],
                    },
                    open_brace: OpenBrace {
                        range: 151..152,
                    },
                    members: ContractMembers {
                        elements: [
                            UserDefinedValueTypeDefinition(
                                UserDefinedValueTypeDefinitionStruct {
                                    type_keyword: TypeKeyword {
                                        range: 155..159,
                                    },
                                    name: Identifier {
                                        range: 160..163,
                                    },
                                    is_keyword: IsKeyword {
                                        range: 164..166,
                                    },
                                    value_type: BoolKeyword(
                                        BoolKeyword {
                                            range: 167..171,
                                        },
                                    ),
                                    semicolon: Semicolon {
                                        range: 171..172,
                                    },
                                },
                            ),
                        ],
                    },
                    close_brace: CloseBrace {
                        range: 173..174,
                    },
                },
            ),
        ],
    },
}
